--- a/kelime/src/main/resources/application.properties
+++ b/kelime/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/kelimecrud?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345
+server.port=9090
